--- a/doc/dissertation/content/explicit_Q.tex
+++ b/doc/dissertation/content/explicit_Q.tex
@@ -2,7 +2,7 @@
 \subsubsection{Definition of Flux Bounds for Explicit Euler}
 %--------------------------------------------------------------------------------
 \begin{theorem}{Discrete Maximum Principle-Satisfying Limited Flux Bounds for
-  Explicit Euler}
+  Explicit Euler}{}
    Using the Explicit Euler FCT scheme
    \begin{equation}\label{explicitFCT}
       \mathbf{M}_L\frac{\mathbf{U}^{n+1}-\mathbf{U}^n}{\Delta t}
