--- a/doc/dissertation/content/limiting_coefficients.tex
+++ b/doc/dissertation/content/limiting_coefficients.tex
@@ -1,7 +1,7 @@
 %--------------------------------------------------------------------------------
 \subsection{Limiting Coefficients}\label{L}
 %--------------------------------------------------------------------------------
-\begin{theorem}{Discrete Maximum Principle-Satisfying Limiting Coefficients}
+\begin{theorem}{Discrete Maximum Principle-Satisfying Limiting Coefficients}{}
    Suppose that that a discrete maximum principle $W_i^+\le U_i^{n+1}\le W_i^-$
    corresponds to the following inequality for the limited correction fluxes:
    \begin{equation}
