--- a/doc/dissertation/content/maximum_principles.tex
+++ b/doc/dissertation/content/maximum_principles.tex
@@ -15,7 +15,7 @@ the characteristics are constant.
 %================================================================================
 \subsection{Integral Form of the Time-Dependent Radiation Transport Equation}
 %================================================================================
-\begin{theorem}{Integral Form of the Time-Dependent Radiation Transport Equation}
+\begin{theorem}{Integral Form of the Time-Dependent Radiation Transport Equation}{}
    An implicit solution to the initial value problem
    \begin{equation}\label{PDE}
       \frac{\partial \psi}{\partial t} + c\mathbf{\Omega}\cdot\nabla\psi(\mathbf{x},t)
@@ -94,7 +94,7 @@ the characteristics are constant.
 %--------------------------------------------------------------------------------
 \subsection{Integral Form of the Steady-State Radiation Transport Equation}
 %================================================================================
-\begin{theorem}{Integral Form of the Steady-State Radiation Transport Equation}
+\begin{theorem}{Integral Form of the Steady-State Radiation Transport Equation}{}
    An implicit solution to the equation
    \begin{equation}\label{PDEss}
       \mathbf{\Omega}\cdot\nabla\psi(\mathbf{x})
@@ -166,7 +166,7 @@ the characteristics are constant.
 %--------------------------------------------------------------------------------
 \subsection{Continuous Maximum Principles}
 %================================================================================
-\begin{theorem}[label={cont}]{Continuous Maximum Principle}
+\begin{theorem}{Continuous Maximum Principle}{cont}
    The following continuous maximum principle is valid for the solution to the
    problem given by Equation \eqref{PDE}:
    \begin{equation}
@@ -251,7 +251,7 @@ the characteristics are constant.
    \]
 \end{proof}
 %--------------------------------------------------------------------------------
-%\begin{theorem}{Upwind Continuous Maximum Principle}
+%\begin{theorem}{Upwind Continuous Maximum Principle}{}
    %The following continuous maximum principle is valid for the solution to the
    %problem given by Equation \eqref{PDE}:
    %\begin{equation}
