--- a/doc/dissertation/content/steadystate_DMP.tex
+++ b/doc/dissertation/content/steadystate_DMP.tex
@@ -5,7 +5,7 @@ case and a number of temporal discretizations.
 %--------------------------------------------------------------------------------
 \subsubsection{Steady-State}
 %--------------------------------------------------------------------------------
-\begin{theorem}{Steady-State Scheme Discrete Maximum Principle}
+\begin{theorem}{Steady-State Scheme Discrete Maximum Principle}{}
 The low-order solution $\mathbf{U}^L$ satisfies the following maximum principle:
 \begin{equation}\label{ss_max_principle}
    W_i^-\leq U_i^L\leq W_i^+\quad\forall i,
