--- a/doc/dissertation/content/theta_DMP.tex
+++ b/doc/dissertation/content/theta_DMP.tex
@@ -1,7 +1,7 @@
 %--------------------------------------------------------------------------------
 \subsubsection{Theta Scheme}
 %--------------------------------------------------------------------------------
-\begin{theorem}{$\theta$-Scheme Discrete Maximum Principle}
+\begin{theorem}{$\theta$-Scheme Discrete Maximum Principle}{}
 If the CFL-like condition
 \begin{equation}\label{theta_CFL}
    \Delta t \leq \frac{m_i}{(1-\theta)A_{i,i}^L}\quad\forall i
