--- a/doc/dissertation/content/transient_FCT.tex
+++ b/doc/dissertation/content/transient_FCT.tex
@@ -90,7 +90,7 @@ called $\F$, is
    + \theta    \pr{D\ij^L-D\ij^{H,n+1}}\pr{U_j^H - U_i^H} \eqp
 \end{multline}
 %--------------------------------------------------------------------------------
-%\begin{proposition}{Discrete $L^\infty$ Norm Stability}
+%\begin{proposition}{Discrete $L^\infty$ Norm Stability}{}
    %Schemes that satisfy the bounds given in Definition \ref{FCTbounds} are
    %stable in the discrete $L^\infty$ norm.
 %\end{proposition}
