--- a/doc/notes/methodology/methodology.tex
+++ b/doc/notes/methodology/methodology.tex
@@ -7,6 +7,7 @@
 \author{Jean-Luc Guermond\\Jean Ragusa\\Joshua Hansel}
 
 \input{../../dissertation/content/newcommands}
+\input{../../dissertation/content/theorems_dissertation}
 
 \begin{document}
 
