--- a/doc/dissertation/content/steadystate_Q.tex
+++ b/doc/dissertation/content/steadystate_Q.tex
@@ -2,7 +2,7 @@
 \subsubsection{Definition of Flux Bounds for Steady-State}
 %--------------------------------------------------------------------------------
 \begin{theorem}{Steady-State Discrete Maximum Principle-Satisfying Limited
-  Flux Bounds}
+  Flux Bounds}{}
    Using the steady-state FCT scheme given by Equation \eqref{FCT_limited_ss},
    the following limited flux bounds $Q_i^\pm$ correspond to the discrete
    maximum principle $W_i^+\le U_i\le W_i^-$:
