finished nomenclature and new newcommands file

--- a/doc/dissertation/dissertation.tex
+++ b/doc/dissertation/dissertation.tex
@@ -9,6 +9,7 @@
 \usepackage{tocvsec2}
 \usepackage[titletoc]{appendix}
 \usepackage{appendix}
+\usepackage{longtable} % for tables that are too large for a single page
 \usepackage{tamuconfig}
 \usepackage{rotating}
 \usepackage{color}
@@ -19,7 +20,8 @@
 
 % input user-defined commands
 \input{content/newcommands}
-\input{content/mathenvironments}
+\input{content/newestcommands}
+\input{content/theorems_dissertation}
 
 \begin{document}
 
