started conservation law section

--- a/doc/dissertation/content/introduction.tex
+++ b/doc/dissertation/content/introduction.tex
@@ -1,6 +1,6 @@
-%================================================================================
-\section{Introduction}
-%================================================================================
+%===============================================================================
+\section{Purpose}
+%===============================================================================
 The solution of conservation law equations such as the neutron transport
 equation represents a number of unique challenges; in the vicinity of strong
 gradients and discontinuities, numerical solutions are prone to spurious
